# docassemble-AKA2JBranding

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/AKA2JBranding/: __init__.py  advertise_weaver.py  ak_document.py
docassemble/AKA2JBranding/data/questions/: aka2j_answer_templates.yml  aka2j_mod_cust_div_templates.yml  aka2j_motion_response_templates.yml  aka2j_templates.yml  custom_organization.yml  custom_organization_demo.yml  custom_organization_that_comes_w_package.yml  feedback.yml  question_for_testing_feedback_form.yml  recaptcha.yml  terms_of_use.yml  truefiling.yml  view_courts.yml
docassemble/AKA2JBranding/data/sources/: configuration_capabilities.yml  court_sample.xlsx
docassemble/AKA2JBranding/data/static/: collapse.css  colors.css  restoreDAstyles.css
docassemble/AKA2JBranding/data/templates/: ak_jurisdiction_content.docx  alternate_service_content.docx  answer_content.docx  answer_domestic_violence_content.docx  answer_domestic_violence_step_heading.docx  answer_jurisdiction_content.docx  answer_jurisdiction_step_content.docx  answer_jurisdiction_step_heading.docx  appeal_contact_parent_content.docx  appeal_content.docx  appeal_response_content.docx  calculate_child_support_content.docx  case_in_2_states_content.docx  contact_other_party_content.docx  decide_after_improper_service_content.docx  default_info_content.docx  default_options_content.docx  dismiss_content.docx  dont_wait_modify_child_support_content.docx  dont_wait_modify_custody_divorce_content.docx  expect_after_motion_or_answer_content.docx  modify_content.docx  (+35 more)
