[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.AKA2JBranding"
version = "26.06.09"
description = "Package to customize Alaska jurisdiction's needs"
readme = "README.md"
authors = [
    { name = "Caroline Robinson", email = "CRobinson@AKcourts.gov" },
]
dependencies = [
    "docassemble.AssemblyLine>=4.5.0",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
